--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,9 +8,17 @@ h1 {
 	color: navy;
 }
 
+li {
+	padding: 5px;
+}
+
+span{
+	font-size: 80%;
+}
+
 .infoBox{
 	background-color:lightcoral;
-	color:white;
+	color: #FFFFFF;
 	padding-bottom:20px;
 	width: 90%;
 	margin: auto;
