--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,32 @@
+header{
+	position: fixed;
+	top:0;
+	width:100%;
+	right:0;
+	background-color:lavenderblush;
+	box-sizing:border-box;
+	border-bottom:2px solid white;
+}
+
+#home{
+	display: inline-block;
+	float:left;
+	margin: 20px 20px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	padding: 5px 10px;
+	font-size: 35px;
+	text-align: center;
+	text-decoration: none;
+	color: black;
+	border: 1px solid black;
+}
+
+#topText{
+	margin-left: -100px;
+	padding-left: -20px;
+}
+
 body {
 	background-color: linen;
 	font-size: 17px;
@@ -78,18 +107,20 @@ span{
 .bnt{
 	display: inline-block;
 	margin-top: 10px;
+	text-decoration: none;
+	color: black;
+	padding: 20px;
+	border: 1px solid black;
 }
 
 .resumeBnt{
 	display: inline-block;
-	margin: 20px 40px;
-	padding: 10px 20px;
-	background-color: pink;
+	margin-top: 25px;
+	padding: 20px 20px;
 	text-align: center;
 	text-decoration: none;
 	color: black;
 }
 .resumeBnt:hover{
-	background-color: palevioletred;
-	color: white;
+	background-color: rgb(240, 215, 225);
 }
