--- a/css/pentaPageStyle.css
+++ b/css/pentaPageStyle.css
@@ -33,66 +33,44 @@ body {
 	font-family:monospace;
 }
 
-h1 {
-	color: navy;
+.pentaInfo{
+  float: left;
+  width: 50%;
+  margin-left: 70px;
 }
 
-li {
-	padding: 5px;
+h2{
+  padding-left: 150px;
+  margin-left: 150px;
 }
 
-span{
-	font-size: 80%;
+h4{
+
 }
 
-.infoBox{
-	background-color:lightcoral;
-	color: #FFFFFF;
-	padding-bottom:20px;
-	width: 90%;
-	margin: auto;
-}
-.infoBox-title{
-	background-color:crimson;
-	padding:10px;
-	box-sizing:border-box;
-	border-top:1px solid rgba(255,255,255,255);
-	border-bottom:1px solid pink;
-}
-
-#gamesImages{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	align-content: center;
-}
-.game{
-	text-align: center;
-	width: 100%;
-}
 .imageLink{
-	width:672px;height:378px
+	width:672px;
+  height:378px;
+  float: left;
 }
 
-.listsBlock {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	align-content: center;
+.game{
+	display: inline-block;
+  float: left;
+	margin: 25px;
+	padding: 20px 20px;
+	text-align: center;
+	text-decoration: none;
+	color: black;
+}
+.game:hover{
+	background-color: rgb(240, 215, 225);
 }
 
-	.skillList{
-		width: 100%;
-	}
 
-		.listTiles{
-				text-align: center;
-				font-size:25px;
-		}
-		.listings{
-			margin-left: 0px;
-			padding: 0px;
-			text-align: center;
-			list-style-type:none;
-		}
+
+
+
 
 .footer-block{
 	 display: grid;
