--- a/css/homePageStyle.css
+++ b/css/homePageStyle.css
@@ -41,6 +41,22 @@ span{
 	font-size: 80%;
 }
 
+.intro{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	align-content: center;
+	font-size: 110%;
+	grid-gap: 50px;
+	grid-row-gap: 0px;
+	align-content: center;
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.intro2{
+	width: 100%;
+}
+
 .infoBox{
 	padding-bottom:20px;
 	width: 90%;
@@ -85,7 +101,8 @@ span{
 	width: 100%;
 }
 .imageLink{
-	width:672px;height:378px
+	width:60%;
+	height:60%;
 }
 
 .listsBlock {
